# qt-city

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  README.md  docker_img.txt
cmake/: platforms.cmake
comp/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
comp/.qt/: QtDeploySupport.cmake
comp/src/: cmake_install.cmake
comp/src/QtCity_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
comp/src/QtCity_autogen/7QTDBEOKRE/: moc_FileIOService.cpp.d
comp/src/QtCity_autogen/BSZ4BE7LVA/: moc_BuildingBase.cpp.d  moc_StructureBase.cpp.d  moc_WorkplaceBase.cpp.d
comp/src/QtCity_autogen/HQD32P4BRJ/: moc_Factory.cpp.d  moc_Forest.cpp.d  moc_Police.cpp.d  moc_ResidentialBuilding.cpp.d  moc_Road.cpp.d  moc_Store.cpp.d
comp/src/QtCity_autogen/LVEQ2VYCUL/: moc_Enums.cpp.d  moc_IGameModel.cpp.d  moc_IService.cpp.d
comp/src/QtCity_autogen/NLOY5YBGEN/: moc_GameBoard.cpp.d  moc_GameModel.cpp.d
comp/src/QtCity_autogen/OTUN7GXZT4/: moc_GamePage.cpp.d  moc_MainWindow.cpp.d  moc_MenuPage.cpp.d
resource/: images.qrc
src/: CMakeLists.txt  main.cpp
src/common/: IService.h
src/common/building/: BuildingType.h
src/common/zone/: ZoneType.h
src/model/: GameBoard.cpp  GameBoard.h  GameModel.cpp  GameModel.h  GameModelFactory.cpp  IGameModel.h  Tile.h
src/model/building/: Factory.cpp  Factory.h  Forest.cpp  Forest.h  Police.cpp  Police.h  ResidentialBuilding.cpp  ResidentialBuilding.h  Road.cpp  Road.h  Stadium.cpp  Stadium.h  Store.cpp  Store.h
src/model/building/base/: BuildingBase.cpp  BuildingBase.h  StructureBase.cpp  StructureBase.h  WorkplaceBase.cpp  WorkplaceBase.h
src/model/export/: Enums.h  GameModelFactory.h  IGameModel.h  IService.h
src/model/zone/: ZoneType.h
src/persistence/: FileIOService.cpp  FileIOService.h  FileIOServiceFactory.cpp  IFileIOService.h
src/persistence/export/: FileIOServiceFactory.h  IFileIOService.h
src/test/: CMakeLists.txt  QtCityGameModelTest.cpp  QtCityGameModelTest.h  QtCityModelBaseTest.cpp  QtCityModelBaseTest.h  QtCityPersistenceTest.cpp  QtCityPersistenceTest.h  QtCityTestMain.cpp
src/view/: GamePage.cpp  GamePage.h  GamePage.ui  MainWindow.cpp  MainWindow.h  MenuPage.cpp  MenuPage.h  MenuPage.ui  ViewFactory.cpp
src/view/export/: ViewFactory.h
test/: CMakeLists.txt  QtCityGameModelTest.cpp  QtCityTestMain.cpp
